--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,78 @@ body {
   overflow-x: hidden;
   margin: 0px, 400px !important;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  animation: spin 2s linear infinite;
+}
+
+.circle {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border-radius: 9999px;
+  background: linear-gradient(45deg, #222054, #ab2638, #f0b73f);
+}
+
+.circle:first-of-type {
+  background: linear-gradient(-45deg, #222054, #222054, #f0b73f);
+}
+
+.circle:nth-of-type(2) {
+  background: linear-gradient(-45deg, #222054, #222054, #f0b73f);
+}
+
+.circle:nth-child(1) {
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.circle:nth-child(2) {
+  top: 50%;
+  right: 0;
+  transform: translate(50%, -50%);
+}
+
+.circle:nth-child(3) {
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+
+.circle:nth-child(4) {
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%);
+}
+
+.shimmer {
+  animation: shimmer 1s infinite linear;
+  background: linear-gradient(to right, #f0f0f0 4%, #e0e0e0 25%, #f0f0f0 36%);
+  background-size: 1000px 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+
+  100% {
+    background-position: 1000px 0;
+  }
+}
